--- a/src/components/BlogSection/BlogSection.css
+++ b/src/components/BlogSection/BlogSection.css
@@ -1,3 +1,24 @@
 .blog-section-container {
-  margin: 4rem 0;
+  margin: 64px 0;
+}
+
+.blogs-sort-btn-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 64px;
+}
+
+.sort-btn {
+  border-radius: 20px;
+  cursor: pointer;
+  border: 1px solid #555555;
+  color: #555555;
+  padding: 6px 10px;
+  background-color: transparent;
+}
+
+.active-btn {
+  border: 1px solid lightseagreen;
+  color: lightseagreen;
 }
