--- a/src/components/CreateBlogModal/CreateBlogModal.css
+++ b/src/components/CreateBlogModal/CreateBlogModal.css
@@ -80,7 +80,7 @@
   border: none !important;
 }
 
-.submit-btn {
+.create-blog-btn {
   width: 100px;
   padding: 8px 4px;
   border-radius: 4px;
@@ -91,4 +91,12 @@
 .error-message {
   color: red;
   font-size: 12px;
+}
+
+@media screen and (max-width: 400px) {
+  .modal {
+    padding: 16px;
+    width: max-content;
+    height: 500px;
+  }
 }
