--- a/src/components/BlogCategoryList/BlogCategoryList.css
+++ b/src/components/BlogCategoryList/BlogCategoryList.css
@@ -11,3 +11,9 @@
   background-color: transparent;
   font-size: 16px;
 }
+
+@media screen and (max-width: 1240px) {
+  .blog-category-container {
+    overflow-x: scroll;
+  }
+}
