--- a/src/components/FeaturedBlogSection/FeaturedBlogCard/FeaturedBlogCard.css
+++ b/src/components/FeaturedBlogSection/FeaturedBlogCard/FeaturedBlogCard.css
@@ -6,6 +6,7 @@
 }
 
 .featured-blogcard-content-container {
+  width: 60%;
   padding: 32px;
 }
 
@@ -44,7 +45,7 @@
 }
 
 .featured-blog-thumbnail-container {
-  width: 75%;
+  width: 40%;
   height: 100%;
 }
 
@@ -52,4 +53,21 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width: 850px) {
+  .featured-blogcard-container {
+    height: 230px;
+  }
+
+  .featured-blogcard-content-container {
+    padding: 16px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .featured-blogcard-container {
+    width: 100%;
+    height: 200px;
+  }
 }
