--- a/src/components/FeaturedBlogSection/FeaturedBlogSection.css
+++ b/src/components/FeaturedBlogSection/FeaturedBlogSection.css
@@ -5,3 +5,9 @@
   box-sizing: border-box;
   margin: 32px 0;
 }
+
+@media screen and (max-width: 580px) {
+  .featured-blogs-section {
+    flex-direction: column;
+  }
+}
