--- a/src/components/BlogSection/BlogSection.css
+++ b/src/components/BlogSection/BlogSection.css
@@ -1,12 +1,23 @@
 .blog-section-container {
   margin: 64px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.blog-title {
+  margin: 0 0 8px;
+}
+
+.blog-date {
+  margin: 0 0 32px;
 }
 
 .blogs-sort-btn-container {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-top: 64px;
 }
 
 .sort-btn {
