--- a/src/components/BlogSection/BlogSection.css
+++ b/src/components/BlogSection/BlogSection.css
@@ -14,6 +14,10 @@
   margin: 0 0 32px;
 }
 
+.blog-author {
+  color: lightseagreen;
+}
+
 .blogs-sort-btn-container {
   display: flex;
   align-items: center;
